[gd_scene load_steps=58 format=2]

[ext_resource path="res://Characters/BaseCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Game/Player/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://HUD/bars/perks.tscn" type="PackedScene" id=4]
[ext_resource path="res://play_sound_2D.gd" type="Script" id=5]
[ext_resource path="res://Assets/SFX/player_attack.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/SFX/player_damage.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/player_dash.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/player_heal.wav" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Attack_Downward"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 63, 64, 65, 66, 67, 68 ]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 56, 57, 58, 59 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Attack_Right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 72, 73, 74, 75, 76, 77 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Attack_Upward"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 47, 46, 48, 49, 50 ]
}

[sub_resource type="Animation" id=5]
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 25 ]
}

[sub_resource type="Animation" id=6]
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=7]
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}

[sub_resource type="Animation" id=8]
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=9]
length = 2.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 1.4, 2.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 36, 37, 38, 39, 41 ]
}

[sub_resource type="Animation" id=10]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 95, 94, 93, 91, 93 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Rest"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 18 ]
}

[sub_resource type="Animation" id=12]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}

[sub_resource type="Animation" id=13]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=14]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 28, 29, 30, 31, 32, 33, 34, 35 ]
}

[sub_resource type="Animation" id=15]
length = 0.9
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 15.4621, 9.26397 )

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 15.37, 25.2053 )

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "Attack_Downward"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Attack_Left"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Attack_Right"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Attack_Upward"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Reconstruct"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "Rest"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Walk_Downward"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "Walk_Leftward"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "Walk_Rightward"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "Walk_Upward"

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachine" id=47]
states/Attack_Downward/node = SubResource( 18 )
states/Attack_Downward/position = Vector2( 307, 49 )
states/Attack_Left/node = SubResource( 19 )
states/Attack_Left/position = Vector2( 86, 180 )
states/Attack_Right/node = SubResource( 20 )
states/Attack_Right/position = Vector2( 86, 49 )
states/Attack_Upward/node = SubResource( 21 )
states/Attack_Upward/position = Vector2( 589, 67 )
states/Reconstruct/node = SubResource( 22 )
states/Reconstruct/position = Vector2( 630, 157.164 )
states/Rest/node = SubResource( 23 )
states/Rest/position = Vector2( 307, 201 )
states/Walk_Downward/node = SubResource( 24 )
states/Walk_Downward/position = Vector2( 109, 329.624 )
states/Walk_Leftward/node = SubResource( 25 )
states/Walk_Leftward/position = Vector2( 237, 343.624 )
states/Walk_Rightward/node = SubResource( 26 )
states/Walk_Rightward/position = Vector2( 460, 334.624 )
states/Walk_Upward/node = SubResource( 27 )
states/Walk_Upward/position = Vector2( 572, 250.624 )
transitions = [ "Rest", "Attack_Right", SubResource( 28 ), "Rest", "Attack_Left", SubResource( 29 ), "Rest", "Attack_Downward", SubResource( 30 ), "Rest", "Attack_Upward", SubResource( 31 ), "Attack_Right", "Rest", SubResource( 32 ), "Attack_Left", "Rest", SubResource( 33 ), "Attack_Downward", "Rest", SubResource( 34 ), "Attack_Upward", "Rest", SubResource( 35 ), "Rest", "Walk_Downward", SubResource( 36 ), "Rest", "Walk_Leftward", SubResource( 37 ), "Rest", "Walk_Rightward", SubResource( 38 ), "Rest", "Walk_Upward", SubResource( 39 ), "Walk_Downward", "Rest", SubResource( 40 ), "Walk_Leftward", "Rest", SubResource( 41 ), "Walk_Rightward", "Rest", SubResource( 42 ), "Walk_Upward", "Rest", SubResource( 43 ), "Walk_Leftward", "Attack_Left", SubResource( 44 ), "Rest", "Reconstruct", SubResource( 45 ), "Reconstruct", "Rest", SubResource( 46 ) ]
start_node = "Rest"
graph_offset = Vector2( 0, 15.884 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=48]

[node name="Player" groups=[
"player",
] instance=ExtResource( 1 )]
position = Vector2( 0.926575, 3.8147e-06 )
z_index = 3
collision_mask = 22
script = ExtResource( 3 )
max_speed = 256.0

[node name="Perks" parent="." index="0" instance=ExtResource( 4 )]
position = Vector2( -25, 2.106 )
scale = Vector2( 0.5, 0.5 )
z_index = 1

[node name="Sprite" type="Sprite" parent="." index="1"]
texture = ExtResource( 2 )
offset = Vector2( 0, -32 )
vframes = 13
hframes = 9
frame = 18

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite" index="0"]
anims/Attack_Downward = SubResource( 1 )
anims/Attack_Left = SubResource( 2 )
anims/Attack_Right = SubResource( 3 )
anims/Attack_Upward = SubResource( 4 )
anims/Dash_Downward = SubResource( 5 )
anims/Dash_Left = SubResource( 6 )
anims/Dash_Right = SubResource( 7 )
anims/Dash_Upward = SubResource( 8 )
anims/Death = SubResource( 9 )
anims/Reconstruct = SubResource( 10 )
anims/Rest = SubResource( 11 )
anims/Walk_Downward = SubResource( 12 )
anims/Walk_Leftward = SubResource( 13 )
anims/Walk_Rightward = SubResource( 14 )
anims/Walk_Upward = SubResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]
position = Vector2( 0.236023, -9.90769 )
scale = Vector2( 1, 0.855164 )
shape = SubResource( 16 )

[node name="DashTimer" type="Timer" parent="." index="3"]
one_shot = true

[node name="DashCooldown" type="Timer" parent="." index="4"]
wait_time = 10.0
one_shot = true

[node name="InvulnerabilityTimer" type="Timer" parent="." index="5"]
wait_time = 2.0
one_shot = true

[node name="FixCooldown" type="Timer" parent="." index="6"]
process_mode = 0
wait_time = 0.1
one_shot = true

[node name="AttackOrigin" type="Position2D" parent="." index="7"]

[node name="Area2D" type="Area2D" parent="." index="8" groups=[
"player",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2( 0, -27.1768 )
shape = SubResource( 17 )

[node name="Camera2D" type="Camera2D" parent="." index="9"]
current = true
limit_left = -1000
limit_top = -1000
limit_right = 3000
limit_bottom = 3000
drag_margin_h_enabled = true
drag_margin_v_enabled = true

[node name="AnimationTree" type="AnimationTree" parent="." index="10"]
tree_root = SubResource( 47 )
anim_player = NodePath("../Sprite/AnimationPlayer")
active = true
parameters/playback = SubResource( 48 )

[node name="Attack" type="AudioStreamPlayer2D" parent="." index="11"]
stream = ExtResource( 6 )
script = ExtResource( 5 )

[node name="TakeDamage" type="AudioStreamPlayer2D" parent="." index="12"]
stream = ExtResource( 7 )
volume_db = 7.0
script = ExtResource( 5 )

[node name="Dash" type="AudioStreamPlayer2D" parent="." index="13"]
stream = ExtResource( 8 )
volume_db = 3.5
script = ExtResource( 5 )

[node name="Heal" type="AudioStreamPlayer2D" parent="." index="14"]
stream = ExtResource( 9 )
volume_db = 11.304
script = ExtResource( 5 )
[connection signal="timeout" from="DashTimer" to="." method="stop_dash"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_InvulnerabilityTimer_timeout"]
